    + New Frame and Home design.
  * Replace patch 0001 syncing with Git as of today.
    + Fix home view accelerators
    + Don't traceback when stopping an already stopped PulsingIcon
    + Fix the mesh-device pulsing icon
  * Update copyright-check cdbs snippet to store newline-delimited
    hints.  Update hints.
  * Drop patch 2991 against no longer provided upstream automade files.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 05 Apr 2008 10:54:56 +0200

sugar (0.79.0-5) unstable; urgency=low

  * Add patch 1001 adding danish l10n.
  * Sync with upstream Git as of today.
    Main changes:
    + Lots of l10n updates
    + Move some LGPL files to GPL
    + Fix access rights of clipboardservice
    + Hide palettes when switching zoom levels

 -- Jonas Smedegaard <dr@jones.dk>  Wed, 26 Mar 2008 12:07:25 +0100

sugar (0.79.0-4) unstable; urgency=low

  * Update CDBS tweaks:
    + Add local python-autotools.mk (and drop py-compile.mk).
    + Update python-vars.mk and makefile.mk for improved DEB_*PACKAGES
      and build-dependency resolving.
    + Cosmetic updates to README.cdbs-tweaks.
  * Fix email address of OLPC Alioth team.

 -- Jonas Smedegaard <dr@jones.dk>  Sun, 16 Mar 2008 14:22:24 +0100

sugar (0.79.0-3) unstable; urgency=low

  * Pass over maintenance of the package to the OLPC team: Change
    Maintainer, and add myself to Uploaders.
  * Build-depend on python-all-dev.
  * Build as arch-all.
  * Fix README.packaging to use "pull; fetch --tags" (not "pull -t").
  * Recommend xserver-xephyr (not xephyr). Closes: bug#470502.
  * Update CDBS tweaks:
    + Add local py-compile.mk and python-vars.mk to handle autotools-
      based Python compilation.
    + Add local autotools.mk, autotools-vars.mk, makefile.mk and
      makefile-vars.mk providing multi-flavor build support needed by
      py-compile.mk.
    + README.cdbs-tweaks updated to mention the above.
    + Add patchsys-quilt.mk.
  * Add already applied patch 2001 to use empy from system.