@@ -5,6 +5,9 @@
 # NB! Local CDBS tweaks in use. More info in README.cdbs-tweaks
 DEB_BUILDDIR = build
 DEB_PYTHON_SYSTEM = pycentral
+DEB_AUTO_UPDATE_ACLOCAL = 1.10
+DEB_AUTO_UPDATE_AUTOMAKE = 1.10
+DEB_AUTO_UPDATE_AUTOCONF = 2.61
 include debian/cdbs/1/rules/upstream-tarball.mk
 include debian/cdbs/1/rules/copyright-check.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
@@ -18,6 +21,21 @@ DEB_UPSTREAM_URL = http://dev.laptop.org/pub/sugar/sources/$(DEB_UPSTREAM_PACKAG
 DEB_UPSTREAM_TARBALL_EXTENSION = tar.bz2
 DEB_UPSTREAM_TARBALL_MD5 = e10b794279af18fc4fd0d7de04c76bc8
 
+# Workaround: can't pass --install to autotools through CDBS
+pre-build::
+	mkdir -p m4
+	[ -e configure ] || autoreconf -i
+	[ -e intltool-update.in ] || intltoolize
+
+# Cleanup automade files
+clean::
+	rm -f aclocal.m4 compile config.guess config.sub configure
+	rm -f intltool-extract intltool-merge intltool-update po/.intltool-merge-cache
+	rm -f m4/intltool.m4
+	[ ! -d m4 ] || rmdir --ignore-fail-on-non-empty m4
+	find -name Makefile.in -exec rm '{}' ';'
+
+
 # Needed by upstream build process
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libglib2.0-dev, python-gtk2-dev, gettext, intltool, shared-mime-info
 
@@ -25,4 +43,4 @@ CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libglib2.0-dev, python-gtk2-dev, ge
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-empy
 
 # Merge duplicate build-dependencies
-CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e '/\bcdbs (>= 0.4.39)/ s/ *,* *\bcdbs (>= \(0.4.23-1.1\)) *,* */, /g' -e 's/^ *, *//' -e 's/ *, *$$//')
+CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e '/\bcdbs (>= 0.4.39)/ s/ *,* *\bcdbs (>= \(0.4.23-1.1\|0.4.27-1\)) *,* */, /g' -e 's/^ *, *//' -e 's/ *, *$$//')
